I see this error with the app, reported by NextJS, please fix it. The error is reported as HTML but presented visually to the user).
A > before the line number in the error source usually indicates the line of interest:

> Runtime Error: Error: Module not found: Can't resolve '@salt-ds/core'
>    8 | import { EnrichmentGrid } from "@/features/enrichment-monitoring/components/enrichment-grid";
>    9 | import type { EnrichmentJob, JobStatus } from "@/types";
> > 10 | import { StackLayout, FlowLayout } from "@salt-ds/core"; // Use Salt layout components
>      | ^
>   11 |
>   12 | // --- Placeholder Data (Keep as is) ---
>   13 | const baseTime = new Date(2024, 3, 25, 10, 0, 0);
>
> https://nextjs.org/docs/messages/module-not-found
> . Error source: Call Stack
> 7
>
> Show 7 ignore-listed frame(s)

--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "@genkit-ai/googleai": "^1.0.4",
     "@genkit-ai/next": "^1.0.4",
     "@hookform/resolvers": "^3.9.0",
-    "@salt-ds/core": "^1.28.1",
-    "@salt-ds/icons": "1.28.1",
-    "@salt-ds/lab": "^1.12.0",
-    "@salt-ds/theme": "^1.14.0",
+    "@salt-ds/core": "^1.40.0",
+    "@salt-ds/icons": "1.13.1",
+    "@salt-ds/lab": "^1.0.0-alpha.59",
+    "@salt-ds/theme": "^1.25.0",
     "@tanstack-query-firebase/react": "^1.0.5",
     "@tanstack/react-query": "^5.66.0",
     "date-fns": "^3.6.0",
